c4prj2_input/grade.txt
Grading at Wed Mar 10 20:25:23 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:14:84: error: invalid type argument of unary ‘*’ (have ‘deck_t {aka struct deck_tag}’)
    fc->decks[index] = realloc(fc->decks[index],(fc->decks[index].n_cards+1)*sizeof(*fc->decks[index]));
                                                                                    ^
future.c:14:31: error: incompatible type for argument 1 of ‘realloc’
    fc->decks[index] = realloc(fc->decks[index],(fc->decks[index].n_cards+1)*sizeof(*fc->decks[index]));
                               ^
In file included from future.c:2:0:
/usr/include/stdlib.h:480:14: note: expected ‘void *’ but argument is of type ‘deck_t {aka struct deck_tag}’
 extern void *realloc (void *__ptr, size_t __size)
              ^
Compilation of future.c failed

Overall Grade: F
